<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Likes count</string>
    <string name="description_shared">Shares count</string>
    <string name="description_views">Views count</string>
    <string name="remove_post">Remove post</string>
    <string name="new_post">Create new post</string>
    <string name="description_create_new_post">Add new post</string>
    <string name="empty_content">Content of the post can\'t be empty!</string>
    <string name="edit_post">Edit post</string>
    <string name="description_cancel_edit">Cancel edit</string>
    <string name="error_empty_content">Content of the post is empty!</string>
    <string name="complete_sharing">Your sharing was successful</string>
    <string name="new_post_has_created">New post was created successfully</string>
    <string name="post_has_edited">The post was edited successfully</string>
    <string name="show_post">Here will be appear the post…</string>
    <string name="chooser_share_post">Choose where you want to share the post</string>
    <string name="description_attachments">Attachments</string>
    <string name="description_post_attachment">Post attachment</string>
    <string name="description_attachment_preview">@string/description_play</string>
    <string name="description_play">Play attachment</string>
    <string name="description_finish_attachments_view">Finish attachments view</string>
    <string name="no_google_api">Google Api Unavailable</string>
    <string name="notification_like">%1$s had liked post №%2$d of %3$s</string>
    <string name="notification_new_post">%1$s had published new post:</string>
    <string name="channel_remote_name">NMedia server notifications</string>
    <string name="channel_remote_description">Notifications from NMedia remote server</string>
    <string name="error_loading">There\'s something wrong with the world today…\nBut you can try again</string>
    <string name="error_saving">The post wasn\'t saved on server…\n(%1$s)\nTry repeat saving from the post card.</string>
    <string name="error_editing">The edited post wasn\'t saved…\n(%1$s)</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">The posts list is empty.\nIf you create a new post, it will appear here</string>
    <string name="load_sample_image">Load Sample Image</string>
    <string name="sample_image">The sample image would be show in here</string>
    <string name="to_load_sample_image_fragment">Go to load sample image screen</string>
    <string name="repeat_save_on_server">Save post to the server</string>
    <string name="attachment_in_post_content">Nested image</string>
    <string name="new_posts_notify">New posts</string>
    <string name="add_post">Add post</string>
    <string name="clear_preview">Clear</string>
    <string name="error_load_photo">Error</string>
    <string name="attachment_preview">Attachment preview</string>
    <string name="add_from_camera">Add from camera</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="item_login">Login</string>
    <string name="item_register">Register</string>
    <string name="item_logout">Logout</string>
    <string name="enter_login">Enter login here</string>
    <string name="enter_password">Enter password here</string>
    <string name="make_logout">Are you sure?</string>
    <string name="auth_dialog">Authentication</string>
    <string name="cancel">Cancel</string>
    <string name="item_password">Password</string>
    <string name="wrong_login_password">Wrong login or password</string>
    <string name="must_to_login">There needs an authentication to perform the action.</string>
    <string name="wish_to_login">Do you wish to login?</string>
    <string name="reg_dialog">Registration</string>
    <string name="item_name">Name</string>
    <string name="enter_name">Enter name here</string>
    <string name="item_confirm_pass">Confirm password</string>
    <string name="enter_confirm_pass">Confirm password here</string>
    <string name="pass_don_t_match">Passwords don\'t match</string>
    <string name="add_avatar">Add an avatar</string>
    <string name="avatar_preview">Avatar preview</string>
    <string name="successful_regin">You are registered successfully</string>
    <string name="ok_auth_push">Congratulations! 🎉 Your authentication is OK. 👌 Thanks for using our app. 🙂</string>
    <string name="ads_push">It\'s an ads. 👽️</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="last_week">Last week</string>
    <string name="long_time_ago">Long time ago</string>
</resources>
