<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/new_post_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids=
            "cancel_edit, bottom_app_bar, post_container"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppTheme.FAB"
        android:src="@drawable/ic_unpublish_post_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_cancel_edit" />

    <ScrollView
        android:id="@+id/post_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_app_bar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/new_post"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/indent" />

            <FrameLayout
                android:id="@+id/preview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/bottom_app_bar">

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/avatars[3]"
                    android:contentDescription="@string/attachment_preview" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_preview"
                    style="@style/Widget.AppTheme.ClearButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/clear_preview" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_app_bar"
        android:background="@color/ripple_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/image_from_gallery"
            style="@style/Widget.AppTheme.MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_from_gallery_32"
            android:contentDescription="@string/add_from_gallery" />

        <ImageView
            android:id="@+id/image_from_camera"
            style="@style/Widget.AppTheme.MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_from_photo_32"
            android:contentDescription="@string/add_from_camera" />

    </LinearLayout>

    <include
        android:id="@+id/progress_bar_view"
        layout="@layout/progress_bar_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>