<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FeedFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/postsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="posts, fab_coordinator"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fab_coordinator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/FABindent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.FAB"
            android:src="@drawable/ic_add_new_post_24"
            android:contentDescription="@string/description_create_new_post" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="errorTitle, retryButton"
        />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_loading"
        style="@style/Widget.AppTheme.AnotherStateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/retryButton"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_loading"
        style="@style/Widget.AppTheme.NMediaOutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTitle"
        />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_posts"
        style="@style/Widget.AppTheme.AnotherStateText"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>