<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrierTop"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        app:barrierDirection="top"
        app:constraint_referenced_ids="edit_content, save_new_post, cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_content"
        android:padding="@dimen/indent"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_new_post"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        android:hint="@string/new_post"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_group"
        app:constraint_referenced_ids="save_new_post, cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/edit_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_new_post"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/cancel_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toEndOf="@id/edit_content"
        app:icon="@drawable/ic_publish_24"
        android:contentDescription="@string/description_create_new_post" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_edit"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/save_new_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        app:icon="@drawable/ic_unpublish_24"
        android:contentDescription="@string/description_cancel_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>